--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 Dodgy little python thing that:
 
- * Deploys a new server at Rackspace Cloud (by way of libcloud)
+ * Deploys a new server at a provider like Rackspace Cloud (by way of libcloud)
 
  * Installs a bunch of stuff like duplicity, python-boto, some scripts
 
  * Sets up a firewall, configures ssh to reject password auth
 
- * Runs a restore of backups from the Amazon S3 cloud based buckets found that match arg(1) (server name)
+ * Runs a restore of backups from the Amazon S3 or Rackspace cloud based buckets found that match arg(1) (server name)
 
  * Runs a collection-status on the backups too
 
