fixes, makes rackspace cloud duplicity containers work again

--- a/README
+++ b/README
@@ -18,7 +18,7 @@ Tonnes of ugly hacks at this stage, working on things from the TODO.
 
 Dependencies:
 
- * libcloud, python, python-paramiko
+ * libcloud, python, fabric
 
 Usage:
 
