Revert "fixes, makes rackspace cloud duplicity containers work again"
This reverts commit 4ff8cb339a6e775a5eec8330a10988386e9d4858.

--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ Things to do
 Definitely
 ----------
 
+ * There is no error checking right now
+
  * make things more configurable in .ini
 
  * Improve the efficiency of scripts, not sure if we really need to use `at` but it seemed to solve the issue of duplicity simply not running?
